--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,14 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+main {
+    overflow-y: auto;
+}
+
 header {
     background-color: #222222;
-    position: fixed;
     width: 100vw;
-    height: 70px;
+    height: 10vh;
 }
 
 span {
@@ -42,7 +45,7 @@ span {
 
 }
 main.container {
-    height: 78vh;
+    height: 75vh;
     width: 90%;
     margin: 10vh auto 5vh auto;
 }
@@ -75,6 +78,7 @@ main.container {
 .card:hover .fa-microphone-slash {
     display: none;
 }
+
 .card img {
     width: 100%;
     height: 100%;
@@ -100,7 +104,8 @@ section.interactions ul {
     height: 100%;
 }
 
-ul li .fa-solid{
+ul li .fa-solid,
+ul li .fa-brands{
     font-size: 1.3rem;
     margin-bottom: .2rem;
 }
